--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,14 +3,15 @@ on:
   push:
     branches: [ main ]
 permissions: { contents: read, pages: write, id-token: write }
+concurrency: { group: "pages", cancel-in-progress: true }
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - run: npm ci
+        with: { node-version: 20, cache: 'npm' }
+      - run: npm ci || npm install
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with: { path: dist }
@@ -19,3 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/deploy-pages@v4
+
