Modify npm install command in GitHub Actions workflow
Updated npm install command to use --no-audit and --no-fund options.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,8 +17,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-      - run: npm ci || npm install
+      - run: npm install --no-audit --no-fund
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
@@ -28,5 +27,3 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/deploy-pages@v4
-
-
