--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,9 +21,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20          # kein cache!
+          node-version: 20         # kein cache => kein Lockfile nötig
       - run: npm install --no-audit --no-fund
       - run: npm run build
+      - run: ls -R dist            # Sichtprüfung im Log (muss index.html + assets/* zeigen)
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
