--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,10 +10,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,11 +17,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20         # kein cache => kein Lockfile nötig
+          node-version: 20
+      # 'npm ci' verlangt ein package-lock.json – wir nehmen 'npm install'
       - run: npm install --no-audit --no-fund
       - run: npm run build
-      - run: ls -R dist            # Sichtprüfung im Log (muss index.html + assets/* zeigen)
-      - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
@@ -34,8 +29,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      name: github-pages       # <<< wichtig, sonst "Missing environment"
     steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
