--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,10 +1,8 @@
 name: Fetch nuLiga → snapshots
 on:
-  schedule:
-    - cron: '*/15 * * * *'
+  schedule: [ { cron: "*/15 * * * *" } ]   # alle 15 Min
   workflow_dispatch:
-permissions:
-  contents: write
+permissions: { contents: write }
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -12,8 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-      - name: Run scraper
-        run: node scripts/scrape-nuliga.mjs
+      - run: node scripts/scrape-nuliga.mjs
       - name: Commit snapshots if changed
         run: |
           git config user.name "github-actions[bot]"
@@ -22,3 +19,4 @@ jobs:
           git diff --cached --quiet && echo "No changes" && exit 0
           git commit -m "chore: update nuLiga snapshots"
           git push
+
