scrape.yml aktualisieren

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,28 +1,27 @@
-name: Fetch nuLiga → snapshots
-
+name: Scrape nuLiga
 on:
-  schedule:
-    - cron: "*/15 * * * *"
   workflow_dispatch:
-
+  schedule:
+    - cron: '*/15 * * * *'
 permissions:
   contents: write
-
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Run scraper
-        run: node scripts/scrape-nuliga.mjs
-      - name: Commit snapshots if changed
+        with: { node-version: '20' }
+      - run: npm i jsdom node-fetch@2
+      - run: node scripts/scrape-nuliga.mjs
+      - name: Commit snapshots
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add public/snapshot.table.json public/snapshot.plan.json || true
-          git diff --cached --quiet && echo "No changes" && exit 0
-          git commit -m "chore: update nuLiga snapshots"
-          git push
+          if [[ -n "$(git status --porcelain public/snapshot.*)" ]]; then
+            git config user.name "asv-bot"
+            git config user.email "asv-bot@users.noreply.github.com"
+            git add public/snapshot.*
+            git commit -m "chore: update nuLiga snapshots"
+            git push
+          else
+            echo "No changes."
+          fi
