--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,3 +25,32 @@ jobs:
           else
             echo "No changes."
           fi
+
+          name: Fetch data → snapshots
+
+on:
+  schedule: [ { cron: "*/15 * * * *" } ]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
+jobs:
+  scrape:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - name: nuLiga → snapshots
+        run: node scripts/scrape-nuliga.mjs
+      - name: News feed → public/news.json
+        run: node scripts/fetch-feed.mjs
+      - name: Commit changes if any
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add public/snapshot.table.json public/snapshot.plan.json public/news.json || true
+          git diff --cached --quiet && echo "No changes" && exit 0
+          git commit -m "chore(data): update snapshots & news"
+          git push
